refactoring to add pause functionality